Address code review: guard mutation gap, allocation, partial asserts
The keyword-order guard didn't guard the invariant it claimed to: a
plain HashMap swap passed the full suite because both the substring
check (which only forbids the literal Map.copyOf token) and the
determinism test (whose a/b/c keys happen to iterate in insertion
order under HashMap) missed it. Switch the probe to z/a/m, where
HashMap's bucket order diverges from insertion order, and rename the
substring test to be honest about its narrow scope. Verified by
mutation: both fail as expected against a HashMap swap and pass
against the real LinkedHashMap-backed implementation.

Also drop the redundant defensive copy of the local keywords map in
evaluateArguments (it never escapes the method otherwise) and use
Map.of() for the empty case, and strengthen the invalid-receiver test
so all four non-array/non-tuple cases assert error category, not just
message text.